--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -126,7 +126,7 @@ PS                                                           <BR>
         11/12
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        <a href=
+        <!-- <a href=
         "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
         title="Click to see solutions">2/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -149,7 +149,7 @@ PS                                                           <BR>
         11/07
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
+        <a href=
         "https://dordt.instructure.com/files/158139115/download?download_frd=1"
         title="Click to see solutions">11/12</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
