--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -102,7 +102,8 @@ PS                                                           <BR>
 		        register-cell (bit-slice) schematics   <br>&nbsp;
         Read Ch 6 Sec 6-5, 6-6, 6-7                    <BR>&nbsp;
         <DO>Do  6-2, 6-3, 6-5*</DO>                    <br>&nbsp;
-		<i><u>Note</u></i>: The online solution to 6-5 is insufficient.<br>&nbsp;
+		<i><u>Note</u></i>: The online solution to 6-5 is insufficient<br>&nbsp;
+		because it has no schematic at all.            <br>&nbsp;
 		Also, Figure 6-11 is not drawn in a conventional <br>&nbsp;
 		bit-slice style.  Present your answer in the  bit-<br>&nbsp;
 		slice style demonstrated in class on 11/12.
