published EGR 204 daily slides

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -201,13 +201,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Ch 6, Defn of Register, Defn of microoperation, bit-slice style schematics<!--end comment--></td>  
    </TR><!-- Week of 11/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/12<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/158277672/download?download_frd=1"><!-- -->
+	  11/12<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/14<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Microoperation types, shift register types, bit-slice examples<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 11/18------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
