Published EGR 363 slides for today

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -199,13 +199,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday -->&nbsp;<!--start comment-->QAM, trends in engineering, freedom, grace, &amp; modal aspects (standards)<!--end comment--></td>  
    </TR><!-- Week of 11/11------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/12<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/158301133/download?download_frd=1"><!-- -->
+	  11/12<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/14<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!-- Tuesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!-- Tuesday -->&nbsp;<!--start comment-->BPSK, QPSK, <i>M</i>-ary PSK, <i>M</i>-QAM, FDM, TRF, Regenerative, Superhet tuning<!--end comment--><br>
       <!--Thursday -->&nbsp;<!--start comment--><font color=grey>Test #2 (No slides)</font><!--end comment--></td>  
    </TR><!-- Week of 11/18------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
