Published solutions for EGR 363 PS#9, PS#10

--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -110,9 +110,9 @@ PS                                                       </small>
         11/07<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
-		>9/12</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/158346628/download?download_frd=1"
+		>11/13</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  DSB-LC, SSB, Hilbert Transform        <br>&nbsp;
         Read Ch 3 Sec. 3.2.2, 3.2.3, Ch 2 Sec. 2.6     <br>&nbsp;
@@ -129,9 +129,9 @@ PS                                                       </small>
         10/31<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
-		>9/12</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/158346539/download?download_frd=1"
+		>11/13</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linear Modulation, DSB-SC             <br>&nbsp;
         Read Ch 3 Sec. 3.1, 3.2.1, 3.2.2               <br>&nbsp;
