EGR 204 PS#21 published, also new errata published

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 11/12/2019 2:42 pm)
+                                >(Last update 11/14/2019 11:39 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -83,6 +83,34 @@ PS                                                           <BR>
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 21
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/14
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/19<BR>
+        11/21
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Tri-state gates (outputs)              <br>&nbsp;
+                         &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+		        Register transfers via tri-state logic <br>&nbsp;
+                         &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+				Register transfer notation             <br>&nbsp;
+        Read Ch 6 Sec 6-8                              <br>&nbsp;
+        <DO>Do  6-30, 6-34*</DO>                    <br>&nbsp;
+		<i><u>Note</u></i>: The online solution to 6-5 is insufficient<br>&nbsp;
+		because it has no schematic at all.            <br>&nbsp;
+		Also, Figure 6-11 is not drawn in a conventional <br>&nbsp;
+		bit-slice style.  Present your answer in the  bit-<br>&nbsp;
+		slice style demonstrated in class on 11/12.
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  20
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -100,9 +128,13 @@ PS                                                           <BR>
         Topics: Register types,                        <br>&nbsp;
                          &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 		        register-cell (bit-slice) schematics   <br>&nbsp;
-        Read Ch 6 Sec 6-5, 6-6, 6-7                    <BR>&nbsp;
+        Read Ch 6 Sec 6-5, 6-6, 6-7                    <br>&nbsp;
         <DO>Do  6-2, 6-3, 6-5*</DO>                    <br>&nbsp;
-		<i><u>Note</u></i>: The online solution to 6-5 is insufficient<br>&nbsp;
+		                                               <br>&nbsp;
+		<i><u>Note 1</u></i>: Note errata on <a href=
+        "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_391"
+                                      >Problem 6-3</a>.<br>&nbsp;
+		<i><u>Note 2</u></i>: The online solution to 6-5 is insufficient<br>&nbsp;
 		because it has no schematic at all.            <br>&nbsp;
 		Also, Figure 6-11 is not drawn in a conventional <br>&nbsp;
 		bit-slice style.  Present your answer in the  bit-<br>&nbsp;
