--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -13,7 +13,7 @@ A:visited {color: #CC9900; font-weight:bold;
 <p align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                   (last update 9/16/2019)<br>
+                   (last update 11/14/2019)<br>
                                <br>
    <img src="ManoKimeMartin5Cover100x132_0133760634.png" width="100" height="132"><br>
   Mano, Kime, and Martin, <I>Logic and Computer Design Fundamentals</I>,<br>
@@ -171,6 +171,32 @@ Page 319, Problem 5-7.</b><br>
    "8 <font face="arial">x</font> 4".<br>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    <small><i>(Posted 6/10/2019)</i></small>
+                                 <br><br><A NAME="P_391"></A><b>
+Page 391, Problem 6-3.</b><br>
+   This problem is poorly worded.  The problem statement below 
+   is a better expression of the authors' intent.  Work this 
+   version of the problem instead.<br><br>
+   
+   <b>6-3.</b> &nbsp; Given any 16-bit operand, what operation 
+   must be performed                                        <br>
+                               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
+          with what mask word to. . .<small><small><small><small><br><br></small></small></small></small>
+                               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
+   (a) clear all odd bit positions to logic-0? (Assume bit positions<br> 
+          &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+    are 15 down to 0 from left to right.)                   <br>
+                               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
+   (b) set the rightmost 4 bits to logic-1?                 <br>
+                               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
+   (c) complement the most significant 8 bits?<small><small><small><small><br><br></small></small></small></small>
+                               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
+   For each case above, demonstrate how the operation and mask<br> 
+                               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
+   word you specify would achieve the goal using the        <br> 
+                               &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
+   operand word 10101100 01010011.<small><small><small><small><br><br></small></small></small></small>
+   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+   <small><i>(Posted 11/14/2019)</i></small>
                                  <br><br><A NAME="P_432"></A><b>
 Page 432, Problem 7-7.</b><br>
    Add this sentence to the problem statement after the first 
