Published daily slides for EGR 204

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -203,12 +203,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/158277672/download?download_frd=1"><!-- -->
-	  11/12<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      11/14<!-- --</a><!-- --></td>
+	  11/12<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/158398536/download?download_frd=1"><!-- -->
+      11/14<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Microoperation types, shift register types, bit-slice examples<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Tri-state gates, Bus transfers via tri-state control, register transfer notation<!--end comment--></td>  
    </TR><!-- Week of 11/18------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
