--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/13/2019 3:42 pm)
+                               >(Last update: 11/15/2019 2:24 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,30 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+11
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/19<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/21<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/158346628/download?download_frd=1"
+		>11/13</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+		         Superheterodyne tuning, image freq.   <br>&nbsp;
+        Read Ch 3 Sec. 3.2.3, 3.2.4, 3.4, 3.5          <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+		         Ch 2 Sec. 2.6, slides<br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 3.24, <a href="https://dordt.instructure.com/files/158486076/download?download_frd=1"
+		>3-A</a> (click link)</DO>           
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 --
