--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 11/19/2019 10:14 pm)
+                                >(Last update 11/19/2019 3:01 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -81,6 +81,25 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
         Problems Assigned        <br><DIV style="font-size: 80%">
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 22
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/19
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/21<BR>
+        11/26
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Memory, ROM, PLA, PAL                  <br>&nbsp;
+        Read Ch 7 Sec 7-1, 7-2, Ch 5 Sec 5-2           <br>&nbsp;
+        <DO>Do  7-1*, 7-2</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  21
