Published EGR 363 daily slides

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -209,13 +209,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday -->&nbsp;<!--start comment--><font color=grey>Test #2 (No slides)</font><!--end comment--></td>  
    </TR><!-- Week of 11/18------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/19<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/158711429/download?download_frd=1"><!-- -->
+	  11/19<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/21<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!-- Tuesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!-- Tuesday -->&nbsp;<!--start comment-->Superheterodyne tuning, image frequency, spurious response frequencies<!--end comment--><br>
       <!--Thursday -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 11/25------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
