Published daily slides for EGR 204, added a support file (hr.m) for EGR 363

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -213,12 +213,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/158696917/download?download_frd=1"><!-- -->
-	  11/19<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      11/21<!-- --</a><!-- --></td>
+	  11/19<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/158807554/download?download_frd=1"><!-- -->
+      11/21<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Ch. 7 and Ch. 5, Memory, ROM, PLA, PLA <!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->ROM timing, static RAM, dynamic RAM, error correction (Hamming code)<!--end comment--></td>  
    </TR><!-- Week of 11/25------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
