--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 11/19/2019 9:52 pm)
+                                >(Last update 11/21/2019 5:22 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -81,6 +81,34 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
         Problems Assigned        <br><DIV style="font-size: 80%">
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 23
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/21
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/26<BR>
+        12/03
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Memory, ROM timing, SRAM, DRAM, ECC    <br>&nbsp;
+        Read Ch 7 Sec 7-3, 7-4, 7-7, Slides on <a href=
+		"https://dordt.instructure.com/files/158807554/download?download_frd=1"
+		                                   >Hamming</a><br>&nbsp;
+        <DO>Do  7-5, 7-7, <a href=
+		"https://dordt.instructure.com/files/156783829/download?download_frd=1"
+		>7-71</a>, <a href=
+		"https://dordt.instructure.com/files/158837838/download?download_frd=1"
+		>7-72</a> (click links)</DO><br>&nbsp;
+		Note errata on <a href=
+        "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_432"
+                      >Problem 1-24</a>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  22
