--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -105,7 +105,7 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/files/156783829/download?download_frd=1"
 		>7-71</a>, <a href=
 		"https://dordt.instructure.com/files/158837838/download?download_frd=1"
-		>7-72</a> (click links)</DO><br>&nbsp;
+		>7-72</a></DO> (click links)<br>&nbsp;
 		Note errata on <a href=
         "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_432"
                       >Problem 7-7</a>
