--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -13,7 +13,7 @@ A:visited {color: #CC9900; font-weight:bold;
 <p align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                   (last update 11/14/2019)<br>
+                   (last update 11/21/2019)<br>
                                <br>
    <img src="ManoKimeMartin5Cover100x132_0133760634.png" width="100" height="132"><br>
   Mano, Kime, and Martin, <I>Logic and Computer Design Fundamentals</I>,<br>
@@ -182,21 +182,28 @@ Page 391, Problem 6-3.</b><br>
                                &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
           with what mask word to. . .<small><small><small><small><br><br></small></small></small></small>
                                &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
-   (a) clear all odd bit positions to logic-0? (Assume bit positions<br> 
+   (a) clear all odd bit positions to logic-0 but leave all even<br>
           &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-    are 15 down to 0 from left to right.)                   <br>
+       bit positions the same as in the given operand? (Assume<br>
+          &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+	   bit positions are 15 down to 0 from left to right.)<br> 
                                &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
-   (b) set the rightmost 4 bits to logic-1?                 <br>
+   (b) set the rightmost 4 bits to logic-1 but leaving all other bit<br>
+          &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+       positions as in the given operand?<br>
                                &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
-   (c) complement the most significant 8 bits?<small><small><small><small><br><br></small></small></small></small>
+   (c) complement the most significant 8 bits but leaving all other<br>
+          &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+       bit positions as in the given operand?
+	   <small><small><small><small><br><br></small></small></small></small>
                                &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
    For each case above, demonstrate how the operation and mask<br> 
                                &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
    word you specify would achieve the goal using the        <br> 
                                &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;  
-   operand word 10101100 01010011.<small><small><small><small><br><br></small></small></small></small>
+   operand word 10101100 01010011<sub>2</sub>.<small><small><small><small><br><br></small></small></small></small>
    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-   <small><i>(Posted 11/14/2019)</i></small>
+   <small><i>(Posted 11/14/2019, updated 11/21/2019)</i></small>
                                  <br><br><A NAME="P_432"></A><b>
 Page 432, Problem 7-7.</b><br>
    Add this sentence to the problem statement after the first 
