--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/15/2019 2:24 pm)
+                               >(Last update: 11/21/2019 8:25 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,26 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+12
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/21<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        12/03<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/158346628/download?download_frd=1"
+		>11/13</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  SSB, FM, PM                           <br>&nbsp;
+        Review Ch 3 Sec. 3.4, 3.5, 3.6,                <br>&nbsp;
+		Read Ch 4 Sec 4.1, 4.2                         <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 3.16, 3.17, 4.1, 4.2</DO>           
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 11
