Published EGR 363 daily slides.  Also added the last week to the slide index for both EGR 204 and EGR 363

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -233,12 +233,22 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
 	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  12/02<!-- --</a><!-- --><br><!-- --<a href=
+	  12/03<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      12/04<!-- --</a><!-- --></td>
+      12/05<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+    </TR><!-- Week of 12/09------------------------------------------------------------------ --><TR>
+      <TD width= "15" align="center" valign="bottom">U<br>R</td>
+	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
+	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
+	  12/10<!-- --</a><!-- --><br><!-- --<a href=
+      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
+      12/12<!-- --</a><!-- --></td>
+      <TD align="left" valign="bottom">
+      <!-- Tuesday -->&nbsp;<!--start comment-->&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <font color=grey>Last day of class</font><!--end comment--><br>
+      <!--Thursday -->&nbsp;<!--start comment--><font color=grey>No class&mdash;AM study time, PM exams</font><!--end comment--></td>  
    </TR><!--------------------------------------------------------------------- End of table --- -->
 </TABLE></p>
 </BODY>
