Published solutions to EGR 363 PS#11

--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/21/2019 8:25 pm)
+                               >(Last update: 11/23/2019 11:47 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -114,9 +114,9 @@ PS                                                       </small>
         11/21<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/158346628/download?download_frd=1"
-		>11/13</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/158928436/download?download_frd=1"
+		>11/26</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
