Published daily slides for EGR 204

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -221,13 +221,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->ROM timing, static RAM, dynamic RAM, error correction (Hamming code)<!--end comment--></td>  
    </TR><!-- Week of 11/25------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/26<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/159057715/download?download_frd=1"><!-- -->
+	  11/26<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/28<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Datapath of a CPU, analogy to <i>Wizard of Oz</i> "bad wizard," <i>Feeling of Power</i><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Thanksgiving Break</font><!--end comment--></td>  
     </TR><!-- Week of 12/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
