--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 11/24/2019 11:55 am)
+                                >(Last update 11/26/2019 3:33 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -81,6 +81,47 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
         Problems Assigned        <br><DIV style="font-size: 80%">
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 24
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/26
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        12/03<BR>
+        12/05
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Datapath of a CPU, Control word        <br>&nbsp;
+        Read Ch 8 Sec 8-1 through 8-6                  <br>&nbsp;
+        <DO>Do  8-1, 8-2*, 8-10*</DO>                       <br>&nbsp;
+													   <br>&nbsp;
+		Note: For Problem 8-2* assume the ALU is       <br>&nbsp;
+        designed to work with numbers in twos          <br>&nbsp;
+        complement format.  Overflow detection is      <br>&nbsp;
+        described on page 171-172 of your text.  The <br>&nbsp;
+        result of your logic should be that <i>N</i> = 1 iff the <br>&nbsp;
+        output of the ALU represents a negative number.<br>&nbsp;
+       Bit <i>Z</i> = 1 iff the output represents zero.<br>&nbsp; 
+        Bit <i>V</i> = 1 iff there was an overflow.    <br>&nbsp;
+        Bit <i>C</i> = 1 iff there was a carry out of  <br>&nbsp;
+        the most significant place.                    <br>&nbsp;
+                                                       <br>&nbsp;
+        A few of the above statements are counter-     <br>&nbsp;
+        intuitive for some people.  For example if the <br>&nbsp;
+ register contains the number zero, then <i>Z</i> = 1. <br>&nbsp;
+       (Some people mistakenly think that <br>&nbsp;
+        if zero is in the register then <i>Z</i> = 0). <br>&nbsp;
+		                                               <br>&nbsp;
+		Further note on  Problem 8-2*: Prof dDB is     <br>&nbsp;
+		pretty sure that "outputs <i>F</i><sub>7</sub> through <i>F</i><sub>0</sub>"<br>&nbsp;
+		should refer to "outputs <i>G</i><sub>7</sub> through <i>G</i><sub>0</sub>"<br>&nbsp;
+		but he is still evaluating the situtation.     
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  23
