Published EGR 363 daily slides

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -104,7 +104,7 @@ PS                                                           <BR>
 		Note: For Problem 8-2* assume the ALU is       <br>&nbsp;
         designed to work with numbers in twos          <br>&nbsp;
         complement format.  Overflow detection is      <br>&nbsp;
-        described on page 171-172 of your text.  The <br>&nbsp;
+        described on pages 171-172 of your text.  The  <br>&nbsp;
         result of your logic should be that <i>N</i> = 1 iff the <br>&nbsp;
         output of the ALU represents a negative number.<br>&nbsp;
        Bit <i>Z</i> = 1 iff the output represents zero.<br>&nbsp; 
