--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -219,13 +219,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday -->&nbsp;<!--start comment-->SSB via filtering, SSB via QAM and Hilbert, Hilbert via conv., analytic signals<!--end comment--></td>  
    </TR><!-- Week of 11/25------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/26<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/159092746/download?download_frd=1"><!-- -->
+	  11/26<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/28<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!-- Tuesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!-- Tuesday -->&nbsp;<!--start comment-->VSB detection and filtering, Introduction to FM and PM<!--end comment--><br>
       <!--Thursday -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Thanksgiving Break</font><!--end comment--></td>  
     </TR><!-- Week of 12/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
