Resoloved an issue with EGR 204 PS#24

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 11/26/2019 3:33 pm)
+                                >(Last update 11/26/2019 9:16 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -107,21 +107,26 @@ PS                                                           <BR>
         described on pages 171-172 of your text.  The  <br>&nbsp;
         result of your logic should be that <i>N</i> = 1 iff the <br>&nbsp;
         output of the ALU represents a negative number.<br>&nbsp;
-       Bit <i>Z</i> = 1 iff the output represents zero.<br>&nbsp; 
+        Bit <i>Z</i> = 1 iff the output represents zero.<br>&nbsp; 
         Bit <i>V</i> = 1 iff there was an overflow.    <br>&nbsp;
         Bit <i>C</i> = 1 iff there was a carry out of  <br>&nbsp;
         the most significant place.                    <br>&nbsp;
                                                        <br>&nbsp;
         A few of the above statements are counter-     <br>&nbsp;
         intuitive for some people.  For example if the <br>&nbsp;
- register contains the number zero, then <i>Z</i> = 1. <br>&nbsp;
-       (Some people mistakenly think that <br>&nbsp;
+        register contains the number zero, then <i>Z</i> = 1. <br>&nbsp;
+        (Some people mistakenly think that <br>&nbsp;
         if zero is in the register then <i>Z</i> = 0). <br>&nbsp;
 		                                               <br>&nbsp;
-		Further note on  Problem 8-2*: Prof dDB is     <br>&nbsp;
-		pretty sure that "outputs <i>F</i><sub>7</sub> through <i>F</i><sub>0</sub>"<br>&nbsp;
-		should refer to "outputs <i>G</i><sub>7</sub> through <i>G</i><sub>0</sub>"<br>&nbsp;
-		but he is still evaluating the situtation.     
+		Further note on  Problem 8-2*: The problem     <br>&nbsp;
+		references "outputs <i>F</i><sub>7</sub> through <i>F</i><sub>0</sub>."<br>&nbsp;
+		However in the textbook figures, such as       <br>&nbsp;
+		Figures 8-1 through Figure 8-6, the outputs of <br>&nbsp;
+		an ALU are usually labeled <i>G</i><sub>i</sub>, not <i>F</i><sub>i</sub>."  It does<br>&nbsp;
+		not matter how the output of an ALU is labeled.<br>&nbsp;
+		Just be aware of the actual ALU outputs        <br>&nbsp;
+		available to solve this problem.  
+		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  23
