Published EGR 363 daily slides

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -229,13 +229,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Thursday -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Thanksgiving Break</font><!--end comment--></td>  
     </TR><!-- Week of 12/02------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  12/03<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/159416152/download?download_frd=1"><!-- -->
+	  12/03<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       12/05<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!-- Tuesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!-- Tuesday -->&nbsp;<!--start comment-->Inst. freq., NBFM and QAM approx., WBFM, Bessel funcs of the 1st kind<!--end comment--><br>
       <!--Thursday -->&nbsp;<!--start comment--><!--end comment--></td>  
     </TR><!-- Week of 12/09------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
