--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/23/2019 11:47 am)
+                               >(Last update: 12/03/2019 9:45 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,32 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+13
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        12/03<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        12/07<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/158346628/download?download_frd=1"
+		>11/13</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  FM, PM, application to FM stereo      <br>&nbsp;
+		Read Ch 4 Sec 4.3, 4.4                         <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 4.4, 4.5, 4.20</DO>                     <br>&nbsp;
+		                                               <br>&nbsp;
+        Note textbook errata on <a href=
+        "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_163"
+						        >page 163</a>.         <br>&nbsp;
+        Note textbook errata on <a href=
+        "../../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_187"
+						        >page 187, Prob. 4.20</a>.		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 12
