Added errata page 182, problem 4.2 Proakis & Salehi 2e

--- a/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
+++ b/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
@@ -14,7 +14,7 @@ A:hover {text-decoration:underline;}
 <A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm" 
                        >TEXTBOOK ERRATA</a><br>
-                       (last update 11/01/2017)<br>
+                       (last update 12/04/2019)<br>
                                <br>
       <img src="Proakis_cover_9780133354850.jpg" width="101" height="141" 
               alt="photo of textbook cover"><br><b>
@@ -98,6 +98,26 @@ Page 163, Figure 4.2</b><br>
    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
    <small><i>(posted 3/24/2016, updated 11/01/2017)</i></small>
    
+                                 <br><br><A NAME=ERR_182></A><b>
+Page 182, Problem 4.2.</b><br>
+   Part two has a typo (<i>f<sub>d</sub></i> should be <i>k<sub>f</sub></i>) 
+   but and there is an amgiguity of units.  Replace part (2) with this
+   question:<br><br>
+   
+   2.  If phase modulation is used with <i>k<sub>p</sub></i> = 1 rad/V what
+   is the maximum <br>&nbsp; &nbsp; 
+   instantanious frequency?  Similarly, if frequency 
+   modulation is used with <br>&nbsp; &nbsp;
+   <i>k<sub>f</sub></i> = 1 Hz/V what is the maximum instantanious frequency? 
+   In each case <br>&nbsp; &nbsp; 
+   let the carrier frequency be <i>f<sub>c</sub></i> and express 
+   the maxiumum frequency as this <br>&nbsp; &nbsp;
+   variable plus a certain amount.     
+   <small><br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+   &nbsp; &nbsp; &nbsp; &nbsp;
+   <i>(posted 12/04/2019)</i></small>
+
+
                                  <br><br><A NAME=ERR_186></A><b>
 Page 186, Problem 4.16.</b><br>
    The units on the peak frequency deviation are incorrectly 
