--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 12/03/2019 6:14 pm)
+                                >(Last update 12/04/2019 5:26 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -193,9 +193,9 @@ PS                                                           <BR>
         12/03
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/159475463/download?download_frd=1"
+        title="Click to see solutions">12/05</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Memory, ROM timing, SRAM, DRAM, ECC    <br>&nbsp;
         Read Ch 7 Sec 7-3, 7-4, 7-7, Slides on <a href=
@@ -221,9 +221,9 @@ PS                                                           <BR>
         11/26
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/159475398/download?download_frd=1"
+        title="Click to see solutions">12/03</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Memory, ROM, PLA, PAL                  <br>&nbsp;
         Read Ch 7 Sec 7-1, 7-2, Ch 5 Sec 5-2           <br>&nbsp;
