--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 12/03/2019 9:45 pm)
+                               >(Last update: 12/04/2019 5:26 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -120,15 +120,18 @@ PS                                                       </small>
         12/03<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/158346628/download?download_frd=1"
-		>11/13</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/159475241/download?download_frd=1"
+		>12/05</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, FM, PM                           <br>&nbsp;
         Review Ch 3 Sec. 3.4, 3.5, 3.6,                <br>&nbsp;
 		Read Ch 4 Sec 4.1, 4.2                         <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 3.16, 3.17, 4.1, 4.2</DO>           
+        <DO>Do 3.16, 3.17, 4.1, 4.2</DO>               <br>&nbsp;
+                                                       <br>&nbsp;
+        <a href="https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_182"
+		>Errata on Problem 4.2</a> discovered 12/04.													   
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 11
