EGR 204 last day of class announced on homework page

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -83,6 +83,39 @@ PS                                                           <BR>
         (In Mano &amp; Kime unless otherwise noted)    </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+--
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        ----
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        ----<BR>
+        ----
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        ----
+
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        12/10 is the last day of class&mdash;no new assignment.<br>&nbsp;
+                                                       <br>&nbsp;
+        After peer grading you may turn in the peer    <br>&nbsp;
+        graded assignment (PS #26) for regular grading,<br>&nbsp;
+        or you may keep it in order to correct it and  <br>&nbsp;
+        then turn it in by 5 PM by placing it in the bin<br>&nbsp;
+        located near Prof. De Boer's office door.      <br>&nbsp;
+                                                <br>&nbsp;<small>
+        PS#25 and PS#26, which you will turn in for regular     <br>&nbsp;
+        grading on 12/10, will be graded overnight and placed   <br>&nbsp;
+        in the plastic bin near De Boer's office door by noon on<br>&nbsp;
+        Wednesday.  You may pick up your homework at your       <br>&nbsp;
+        convenience after that.  Look for an envelop with your  <br>&nbsp;
+		your name on it in the plastic bin.    </small><br>&nbsp;
+                                                       <br>&nbsp;
+        After peer grading we will review for the exam <br>&nbsp;
+        and fill in the course evaluation forms.
+
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  26
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
