New errata on p481, MKM5 and added to EGR 204 HW page, PS#25

--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -13,7 +13,7 @@ A:visited {color: #CC9900; font-weight:bold;
 <p align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                   (last update 11/21/2019)<br>
+                   (last update 12/05/2019)<br>
                                <br>
    <img src="ManoKimeMartin5Cover100x132_0133760634.png" width="100" height="132"><br>
   Mano, Kime, and Martin, <I>Logic and Computer Design Fundamentals</I>,<br>
@@ -214,6 +214,15 @@ Page 432, Problem 7-8.</b><br>
    Add a phrase to the start of part (b) so that it reads:<br>
    "<b>(b)</b> Given that the memory system is organized into 16 
    bit words, how many address lines. . . "
+                                   <br><br><A NAME="P_481"></A><b>
+Page 481, Problem 8-15</b><br>
+   In the table that accompanies part (a) the header row includes 
+   "<b>BA</b>" twice, once in column 4 and again in column 5.  Change the 
+   instance of "<b>BA</b>" that is in column 5 to "<b>MB</b>."  Also add one 
+   more colunm, which will be column 12, and enter "<b>BC</b>" into the 
+   header row of that new column.  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <small><i>(Posted 12/05/2018)</i></small>
+   
                                    <br><br><A NAME="P_483"></A><b>
 Page 483, Problem 8-25</b><br>
    Append the following to the end of the problem statement:<br>
