--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 12/05/2019 4:27 pm)
+                                >(Last update 12/05/2019 9:33 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -158,10 +158,13 @@ PS                                                           <BR>
                          &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 		        Instruction formats, Instruction decoder<br>&nbsp;
         Read Ch 8 Sec 8-7 through 8-8                  <br>&nbsp;
-        <DO>Do  8-12, 8-15</DO>                       <br>&nbsp;
+        <DO>Do  8-12, 8-15</DO>                        <br>&nbsp;
+		                                               <br>&nbsp;
+		Note errata on <a href=
+        "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_481"
+                      >Problem 8-15</a>				   <br>&nbsp;
                                                        <br>&nbsp;
         Hints for problem 8-15:                        <br>&nbsp;
- 
         It might be easier to do part (b) first.       <br>&nbsp;
                                                        <br>&nbsp;
         For part (a) fill unused fields with "X" for   <br>&nbsp; 
