Published EGR 204 PS#24 solutions

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 12/05/2019 10:06 pm)
+                                >(Last update 12/09/2019 7:23 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -205,9 +205,9 @@ PS                                                           <BR>
         12/05
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/159848189/download?download_frd=1"
+        title="Click to see solutions">2/10</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Datapath of a CPU, Control word        <br>&nbsp;
         Read Ch 8 Sec 8-1 through 8-6                  <br>&nbsp;
