Published EGR 363 PS#13 solutions.  Also fixed a typo on EGR 204 assignements page

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -192,7 +192,7 @@ PS                                                           <BR>
 		The small letters "se" stand for "sign-        <br>&nbsp;
 		extended."  This means that the word will be   <br>&nbsp;
 		padded up to its final width by copying the    <br>&nbsp;
-		sign bit into the more signficant places.  		
+		sign bit into the more significant places.  		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  24
