--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 12/04/2019 5:26 pm)
+                               >(Last update: 12/11/2019 8:20 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -94,9 +94,9 @@ PS                                                       </small>
         12/07<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/158346628/download?download_frd=1"
-		>11/13</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/160127653/download?download_frd=1"
+		>12/11</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  FM, PM, application to FM stereo      <br>&nbsp;
 		Read Ch 4 Sec 4.3, 4.4                         <br>&nbsp;
