Published EGR 204 PS#25, PS#26 solutions

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -126,10 +126,10 @@ PS                                                           <BR>
 		
         12/10<br>at<br>5:00 pm
         
-   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR><br>
+        <a href=
+        "https://dordt.instructure.com/files/160262479/download?download_frd=1"
+        title="Click to see solutions">12/13</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Assembly language, addressing modes,   <br>&nbsp;
                          &nbsp; &nbsp &nbsp; &nbsp; &nbsp;&nbsp;
@@ -150,9 +150,9 @@ PS                                                           <BR>
         12/10
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/160262426/download?download_frd=1"
+        title="Click to see solutions">12/13</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Single-cycle sequencer,                <br>&nbsp;
                          &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
