--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -245,7 +245,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       12/12<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!-- Tuesday -->&nbsp;<!--start comment-->&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <font color=grey>Last day of class</font><!--end comment--><br>
+      <!-- Tuesday -->&nbsp;<!--start comment-->Discussed previous slides, no new slides. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <font color=grey>Last day of class</font><!--end comment--><br>
       <!--Thursday -->&nbsp;<!--start comment--><font color=grey>No class&mdash;AM study time, PM exams</font><!--end comment--></td>  
    </TR><!--------------------------------------------------------------------- End of table --- -->
 </TABLE></p>
