Improved the CV page, the part about Susan's death.

--- a/CV.HTM
+++ b/CV.HTM
@@ -521,24 +521,34 @@
         &nbsp; Ask me about it some day!</P> 
 
         <P>However, God's beautiful universe has been corrupted 
-		by sin, with all its ugliness for us to experience.  
-		In 1996 my first wife, Susan, died of cancer.  An 
-        experience like that would make anyone ask, "what is life 
-        all about anyway?"  I had to fall back on my faith.  The 
-        shorter Westminster Catechism's first question and answer 
-        is: <BR><blockquote> 
+		by sin, with all its ugliness for us to experience. In 
+		1996 my first wife, Susan, was diagnosed with a fatal 
+		cancer during the C-section birth of our second daughter.
+        A tumor was removed during the C-section and Susan survived
+        the birth, but the doctors told us that she had only a 
+        matter of months, to at most five years, to live.  In 1996, 
+		three years after our daughter's birth, at age 36, Susan 
+		died from her cancer.</P>
+		
+		Susan's death does not make much sense to me.  A wife and 
+		mother struck down in the prime of her life would make 
+		anyone ask, "what is life all about anyway?"  Were it not 
+		for my Christian faith I think I would conclude that life 
+		is a meaningless struggle.  The shorter Westminster 
+		Catechism's first question and answer is: <BR><blockquote> 
         
              Q1: What is the chief end of man? <BR> 
 
              A1: Man's chief end is to glorify God, and to enjoy 
              Him forever. <BR></blockquote>
 
-        Susan glorified God in her earthly life as a wife, mother, 
-		artist, and friend of others.  I, along with all other 
-		living Christians, am likewise called to glorify God in 
-		all aspects of living.  It is our place to be beacons of 
-		light in this world, in both our personal lives and our 
-		professional lives.</P> 
+        It is our place to be beacons of light in this world, 
+		in both our personal lives and our professional lives. 		
+		Susan glorified God in her earthly life as a wife, mother, 
+		artist, and friend of others.  That is the significance 
+		of her life. All of us find our true significance only in 
+		glorifying God.  
+		 </P> 
 
         <P>In 1998 I married Marge.  She grew up in Grand Rapids 
         Michigan and went to the same high school I did, <!-- 
@@ -780,7 +790,7 @@
         <HR>
         <A HREF = "INDEX.HTM">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 8/20/2019)</small></DIV>
+         <small>(This page last updated on 12/23/2019)</small></DIV>
     </TD>
 </TR>
 
